@@ -1,3 +1,6 @@
+2024-09-15 Konstantin Kushnir <chpock@gmail.com>
+	* Standardize root mount point as //cookit:/
+
 2024-09-14 Kontantin Kushnir <chpock@gmail.com>
 	* Add build for Tcl9 (macOS doesn't work yet)
 	* Normalize platform names
